--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 
 NEXT_PUBLIC_MAIN_ENDPOINT=https://5bf0b7fb0756d20013119887.mockapi.io/api/dealers/search/
+NEXT_PUBLIC_GITHUB_ENDPOINT=https://api.github.com
