--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@monaco-editor/react": "4.5.1",
     "@types/node": "20.1.4",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
-    "axios": "^1.4.0",
-    "builder-pattern": "^2.2.0",
+    "axios": "1.4.0",
+    "builder-pattern": "2.2.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "monaco-editor": "^0.38.0",
     "next": "13.4.2",
     "postcss": "8.4.23",
     "react": "18.2.0",
@@ -25,5 +27,9 @@
     "recoil": "^0.7.7",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "file-loader": "^6.2.0",
+    "raw-loader": "^4.0.2"
   }
 }
