--- a/.editorconfig
+++ b/.editorconfig
@@ -20,7 +20,7 @@ indent_size = 4
 quote_type = single
 max_line_length = 120
 
-[*.ts]
+[*.ts, *.tsx]
 indent_style = space
 indent_size = 4
 quote_type = single
