--- a/package.json
+++ b/package.json
@@ -40,16 +40,16 @@
     "@radix-ui/react-tooltip": "^1.0.6",
     "@t3-oss/env-nextjs": "^0.4.1",
     "@types/node": "20.1.4",
-    "@types/react": "18.2.6",
+    "@types/react": "^18.2.14",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "axios": "1.4.0",
     "builder-pattern": "2.2.0",
+    "class-variance-authority": "^0.6.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
-    "monaco-editor": "^0.38.0",
-    "class-variance-authority": "^0.6.0",
     "lucide-react": "^0.252.0",
+    "monaco-editor": "^0.38.0",
     "next": "13.4.2",
     "postcss": "8.4.23",
     "react": "18.2.0",
@@ -65,4 +65,3 @@
     "zod": "^3.21.4"
   }
 }
-
