[NO-BTS] add login page and some styles

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 
 NEXT_PUBLIC_MAIN_ENDPOINT=https://5bf0b7fb0756d20013119887.mockapi.io/api/dealers/search/
 NEXT_PUBLIC_GITHUB_ENDPOINT=https://api.github.com
+NEXT_PUBLIC_APP_URL=localhost:3000
