--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.1.1",
     "@monaco-editor/react": "4.5.1",
     "@radix-ui/react-accessible-icon": "^1.0.3",
     "@radix-ui/react-accordion": "^1.1.2",
@@ -39,6 +40,7 @@
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.6",
     "@t3-oss/env-nextjs": "^0.4.1",
+    "@tailwindcss/typography": "^0.5.9",
     "@types/node": "20.1.4",
     "@types/react": "^18.2.14",
     "@types/react-dom": "18.2.4",
@@ -51,12 +53,17 @@
     "lucide-react": "^0.252.0",
     "monaco-editor": "^0.38.0",
     "next": "13.4.2",
+    "next-auth": "^4.22.1",
+    "next-contentlayer": "^0.3.4",
+    "next-themes": "^0.2.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.1",
     "recoil": "^0.7.7",
     "tailwind-merge": "^1.13.2",
-    "tailwindcss": "3.3.2"
+    "tailwindcss": "3.3.2",
+    "tailwindcss-animate": "^1.0.6"
   },
   "devDependencies": {
     "file-loader": "^6.2.0",
